fix(i/phone): spacing issue with wait music custom recording (#5923)

--- a/src/pages/integrations/integration/components/voice/WaitMusicField.less
+++ b/src/pages/integrations/integration/components/voice/WaitMusicField.less
@@ -9,4 +9,10 @@
     .radioButtonOption {
         margin-bottom: @layout-spacing-s;
     }
+
+    .optionContentHorizontal {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+    }
 }
